lessons 12-13 hometasks (#55)
* upd

* upd

* upd

* upd

* upd

* upd

* upd

* upd

* upd

* upd

* upd

* Update lesson-11/src/services/users.ts


* Update lesson-11/src/services/tasks.ts


* Update lesson-11/src/services/tasks.ts


* Update lesson-11/src/services/posts.ts


* Update lesson-11/src/services/tasks.ts


* Update lesson-11/src/services/posts.ts


* Update lesson-11/src/services/tasks.ts


* Update lesson-11/src/services/users.ts


* Update lesson-11/src/schemas/users.ts


* fix PR comments

* fix PR comments

* fix PR comments

* upd

* add tests

* add eslint

* upd eslint

* upd linter

* upd linter

* upd

* upd

* add testt

* upd

* upd

* fix PR comments

---------
