# lesson-11/src/dtos/userRequest.dto.ts
@@ -1,0 +1,7 @@
+export interface CreateUserDto {
+  name: string;
+  email: string;
+  isActive?: boolean;
+}
+
+export type UpdateUserDto = Partial<CreateUserDto>;
